tests/specs/run/_038_checkjs/038_checkjs.js.out
[WILDCARD]
error: TS2552 [ERROR]: Cannot find name 'consol'. Did you mean 'console'?
consol.log("hello world!");
~~~~~~
    at [WILDCARD]/038_checkjs.js:2:1

    'console' is declared here.
    declare var console: Console;
                ~~~~~~~
        at [WILDCARD]

TS2552 [ERROR]: Cannot find name 'Foo'. Did you mean 'foo'?
const foo = new Foo();
                ~~~
    at [WILDCARD]/038_checkjs.js:5:17

    'foo' is declared here.
    const foo = new Foo();
          ~~~
        at [WILDCARD]/038_checkjs.js:5:7

Found 2 errors.
